# pacman-game

./: CMakeLists.txt
include/: assets.h  difficulty.h  game.h  menu.h  record.h
src/: assets.c  difficulty.c  game.c  main.c  menu.c  record.c
